<resources>
    <string name="app_name">Pokedéx</string>
    <string name="Description">Search Pokémon for name or using the Nation Pokédex number.</string>
    <string name="SearchHint">What Pokémon are you looking for?</string>
    <string name="hint_loading_pokemons">Loading Pokémons...</string>
    <string name="title_filter">Filters</string>
    <string name="description_filter">Use advanced search to explore Pokémon by type, weakness, height and more!</string>
    <string name="title_types">Types</string>
    <string name="title_Weaknesses">Weaknesses</string>
    <string name="title_Heights">Heights</string>
    <string name="title_Weights">Weights</string>
    <string name="title_number_range">Number Range</string>
    <string name="title_button_apply">Apply</string>
    <string name="title_button_cancel">Cancel</string>
</resources>