<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.presentation.HomeScreen.HomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/ibFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ImageButton
        android:id="@+id/ibSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sort"
        app:layout_constraintEnd_toStartOf="@id/ibFilter"
        app:layout_constraintTop_toTopOf="@id/ibFilter"
        app:layout_constraintBottom_toBottomOf="@id/ibFilter"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ImageButton
        android:id="@+id/ibGeneration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_generation"
        app:layout_constraintEnd_toStartOf="@id/ibSort"
        app:layout_constraintTop_toTopOf="@id/ibSort"
        app:layout_constraintBottom_toBottomOf="@id/ibSort"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:id="@+id/tvAppName"
        android:clickable="true"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/ibGeneration"
        style="@style/ApplicationTitle" />

    <TextView
        android:id="@+id/tvDescription"
        android:text="@string/Description"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Description" />

    <ProgressBar
        android:id="@+id/progressLoading"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintStart_toStartOf="@id/edtSearch"
        app:layout_constraintEnd_toEndOf="@id/edtSearch"
        app:layout_constraintTop_toBottomOf="@id/edtSearch"
        android:max="890"
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:paddingStart="8dp"
        android:enabled="false"
        android:textAlignment="center"
        android:hint="@string/hint_loading_pokemons"
        style="@style/Description"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemonList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_rv_home"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/edtSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>