<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/pushCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        android:layout_width="150dp"
        android:layout_height="5dp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pushCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitlePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PokemonName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:text="@string/title_filter"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Description"
                android:textColor="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePage"
                app:layout_constraintStart_toStartOf="@id/tvTitlePage"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/description_filter"/>

            <TextView
                android:id="@+id/tvTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FilterTitle"
                android:layout_marginTop="35dp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_types"/>

            <HorizontalScrollView
                app:layout_constraintTop_toBottomOf="@id/tvTypeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivTypeBug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_type_bug__selected_false"/>

                    <ImageView
                        android:id="@+id/ivTypeDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_type_dark__selected_false"/>
                </LinearLayout>

            </HorizontalScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>